// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`while using unreact.compileDir() should convert react components of one tag to ejs 1`] = `
"<div>
  <div>
    <span></span>
  </div>
</div>

<div></div>
"
`;

exports[`while using unreact.compileDir() should convert react components of one tag to pug 1`] = `
"div
  div
    span

div
"
`;

exports[`while using unreact.compileFile() should convert react components of one tag to ejs 1`] = `
"<div></div>
"
`;

exports[`while using unreact.compileFile() should convert react components of one tag to pug 1`] = `
"div
"
`;
